Fix some layout issues with FSE (#11)
* Add a fix for some FSE behavior

* Format js

* Update main.yml

* More escaping

* Render Global Styles

* Remove the removal of global styles

* Remove Spacing Control

* Update blocks.css

* Remove Global Styles

* Update script.js

* Remove FSE fixes

* Add some more gutenberg features

--- a/theme/src/css/src-base/_alignment.css
+++ b/theme/src/css/src-base/_alignment.css
@@ -33,7 +33,6 @@
 	max-width: none;
 	margin-left: calc(var(--grid-gutter-width) * -1);
 	margin-right: calc(var(--grid-gutter-width) * -1);
-	padding: 0;
 }
 
 @media (--sm-query) {
